--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
     "python.pythonPath": "C:\\Users\\namju\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    ,"json.maxItemsComputed": 20000
 }
